--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-footer {
-  background-color: #4682b4;
-  color: #fff;
-  text-align: center;
-  padding: 30px;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 
 header {
   background-color: #4682b4;
@@ -14,6 +14,20 @@ header h1 {
   text-align: center;
   padding: 10px;
 }
+
+
+body {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  font-family: "Arial", sans-serif;
+}
+
+main {
+  background-color: #f0f0f0;
+}
+
+
 
 .filtros {
   display: flex;
@@ -62,7 +76,7 @@ header h1 {
   border-radius: 0 25px 25px 0;
 }
 
-.icone-filtro-container {
+.container-filtro {
   position: absolute;
   right: 20px;
 }
@@ -104,19 +118,19 @@ header h1 {
   grid-template-columns: 1fr 1fr;
 }
 
-.dialog-filtro-input {
+.input-filtro {
   display: flex;
   flex-direction: column;
   margin-bottom: 15px;
   margin-right: 10px;
 }
 
-.dialog-filtro-input label {
+.input-filtro label {
   font-size: 16px;
   margin-bottom: 5px;
 }
 
-.dialog-filtro-input input,
+.input-filtro input,
 select {
   padding: 10px;
   font-size: 16px;
@@ -125,7 +139,7 @@ select {
   outline: none;
 }
 
-.dialog-filtro-fechar {
+.fechar-filtro {
   position: absolute;
   border: none;
   background: none;
@@ -134,7 +148,7 @@ select {
   cursor: pointer;
 }
 
-.dialog-filtro-aplicar {
+.aplicar-filtro {
   grid-column: 1 / 3;
   padding: 10px 20px;
   border: none;
@@ -145,36 +159,19 @@ select {
   font-size: 16px;
 }
 
-.dialog-filtro-aplicar:hover {
+.aplicar-filtro:hover {
   background-color: #0056b3;
 }
 
-@media (max-width: 730px) {
-  .dialog-filtro form {
-    display: flex;
-    flex-direction: column;
-  }
-}
 
-body {
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  height: 100vh;
-  font-family: "Arial", sans-serif;
-}
-
-main {
-  background-color: #f0f0f0;
-}
-
-.lista-noticias {
+.lista-noticia {
   display: flex;
   flex-direction: column;
   align-items: center;
   list-style: none;
 }
 
-.lista-noticias li {
+.lista-noticia li {
   width: 100ch;
 }
 
@@ -223,7 +220,7 @@ main {
   width: 100%;
 }
 
-.lista-paginacao {
+.lista-pagina {
   display: flex;
   justify-content: center;
   list-style: none;
@@ -233,11 +230,11 @@ main {
   gap: 5px;
 }
 
-.lista-paginacao li {
+.lista-pagina li {
   margin: 0 5px;
 }
 
-.lista-paginacao button {
+.lista-pagina button {
   padding: 5px 10px;
   border: 2px solid #4682b4;
   background-color: #fff;
@@ -248,12 +245,19 @@ main {
   transition: background-color 0.3s, color 0.3s;
 }
 
-.lista-paginacao button:hover {
+.lista-pagina button:hover {
   background-color: #f0f0f0;
 }
 
+@media (max-width: 730px) {
+  .dialog-filtro form {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 @media (max-width: 1200px) {
-  .lista-noticias li {
+  .lista-noticia li {
     width: 75%;
   }
 }
@@ -263,7 +267,7 @@ main {
     flex-direction: column;
   }
 
-  .lista-noticias li {
+  .lista-noticia li {
     width: 90%;
   }
 
@@ -277,8 +281,11 @@ main {
   }
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+
+
+footer {
+  background-color: #4682b4;
+  color: #fff;
+  text-align: center;
+  padding: 30px;
 }
